Fix issue with Firefox not showing full height col.

--- a/app/styles/components/side-bar.scss
+++ b/app/styles/components/side-bar.scss
@@ -1,4 +1,5 @@
 .sideBar {
+  min-height: 100vh;
   background-color: $colors-gray-darkest;
   padding: $size-padding-default;
   color: $colors-white-base;
